--- a/player.css
+++ b/player.css
@@ -27,12 +27,14 @@ body {
 button { border:0;}
 
 #iPhone {
+    position: relative;
     width:411px; height:800px;
+    margin: 0 auto; top: 50%;
+    transform: translate(0, -50%);
+    
     background-image:url("iphone.png");
     margin: 0 auto;
     background-repeat:no-repeat;
-    
-    top:10%;
 }
 #iPhoneCase {
     position: relative;
@@ -205,14 +207,14 @@ button { border:0;}
     position:fixed;
     width: 100%; height: auto;
     top: 75px; bottom: 0;
-    vertical-align: middle;
     float: left;
     overflow-y: scroll;
 }
 .preference {
-    width: 20%; height: 80px;
+    width: 19.8%;
     float:left; overflow:hidden;
     margin:2%; padding: .5%;
+    
     border-radius: 50%;
     background: rgba(96, 96, 96, 0.7);
     background-size: cover;
@@ -239,7 +241,7 @@ button { border:0;}
     box-align:center;
     
     font-family: "Lato", "Lucida Sans Unicode", "Times New Roman", Times, serif;
-    font-size: 15px; color:white;
+    font-size: 12px; font-weight: bold; color:white;
 }
 
 #prefModal {
