--- a/player.css
+++ b/player.css
@@ -53,7 +53,7 @@ button { border:0;}
     z-index: 500;
 }
 #header_player {
-    height: 90px;
+    height: 145px;
 }
 #header_player a, #header a{
     color: #404040;
@@ -65,7 +65,7 @@ button { border:0;}
     left:10%;
     
     font-family: "Lato", "Lucida Sans Unicode", "Times New Roman", Times, serif;
-    font-size:20px; text-align:center;
+    font-size:15px; text-align:center;
     
     /* Internet Explorer 10 */
     display:-ms-flexbox;
@@ -89,7 +89,37 @@ button { border:0;}
 }
 .header_nav {
     position:absolute;
-    width: 20px; height: 70px;
+    width: 20px; height: 110px;
+    
+    top: 15px;
+    
+    font-size:30px;
+}
+.header_navRight {
+    float:left; text-align:center;
+    right:15px;
+}
+.header_navLeft {
+    float:left; text-align:center;
+    left:5px;
+}
+#media_bar {
+    position: absolute;
+    width: 100%; height: 20px;
+    top:60px; left: 0px;
+}
+#player_controls {
+    position: absolute;
+    width: 100%; height: 40px;
+    top: 80px;
+    
+    color: #404040; text-align:center;
+    vertical-align:middle;
+    font-size:50px;
+}
+.player_btn {
+    width: 15%; height: 100%;
+    padding-left:2.5%; padding-right:2.5%;
     
     /* Internet Explorer 10 */
     display:-ms-flexbox;
@@ -105,27 +135,16 @@ button { border:0;}
     display:-webkit-box;
     -webkit-box-pack:center;
     -webkit-box-align:center;
-    
-    font-size:30px;
+    float:left;
 }
-.header_navRight {
-    float:left; text-align:center;
-    right:25px;
-}
-.header_navLeft {
-    float:left; text-align:center;
-    left:5px;
-}
-#media_bar {
-    position: absolute;
-    width: 100%; height: 20px;
-    top:65px;
+.player_btn:active span {
+    color:white; background: #404040; border-radius: 10px; overflow: hidden;
 }
 
 #queue {
     position:absolute;
     width: 90%; height: 60%;
-    left: 5%; top: 24%;
+    left: 5%; top: 165px;
     font-family: "Lato", "Lucida Sans Unicode", "Times New Roman", Times, serif;
     vertical-align: middle;
     
@@ -158,48 +177,24 @@ button { border:0;}
     overflow: hidden; white-space: nowrap;
     text-overflow: ellipsis;
     text-align:left;
+    
+    font-size: 15px;
 }
 .queue_item:hover > span {
     text-align:right;
 }
 
-#player {
+#footer {
     position: fixed;
-    width: 100%; height: 15%;
-    bottom: 0;
+    width: 100%; height: 30px;
+    padding-top: 5px; bottom: 0;
     
-    color:white; text-align:center;
+    color:#404040; background:white;
+    text-align:center;
     vertical-align:middle;
-    font-size:50px;
-}
-#player_controls {
-    width: 100%; height: 100%;
-    
-    color: #404040; text-align:center;
-    vertical-align:middle;
-    font-size:50px;
-    background: white;
+    font-size:15px;
+    font-family: "Lato", "Lucida Sans Unicode", "Times New Roman", Times, serif;
     border-top: 5px solid #596EAE;
-}
-.player_btn {
-    width: 15%; height: 100%;
-    padding-left:2.5%; padding-right:2.5%;
-    
-    /* Internet Explorer 10 */
-    display:-ms-flexbox;
-    -ms-flex-pack:center;
-    -ms-flex-align:center;
-
-    /* Firefox */
-    display:-moz-box;
-    -moz-box-pack:center;
-    -moz-box-align:center;
-
-    /* Safari, Opera, and Chrome */
-    display:-webkit-box;
-    -webkit-box-pack:center;
-    -webkit-box-align:center;
-    float:left;
 }
 
 #preferences {
